--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -29,6 +30,8 @@
         android:text="event on "
         android:textColor="#696969"
         android:textSize="16dp" />
+
+
 
     <TextView
         android:id="@+id/tv_desc"
@@ -60,25 +63,39 @@
         android:textSize="16dp" />
 
     <TextView
-        android:id="@+id/tv_section"
+        android:id="@+id/tv_location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_class"
+        android:layout_below="@+id/tv_desc"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="10dp"
         android:paddingLeft="10dp"
         android:text="event on "
         android:textColor="#696969"
-        android:textSize="16dp"
-        android:visibility="gone" />
+        android:textSize="16dp" />
+
+    <!--<TextView-->
+        <!--android:id="@+id/tv_section"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/tv_class"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:layout_marginTop="5dp"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:paddingLeft="10dp"-->
+        <!--android:text="event on "-->
+        <!--android:textColor="#696969"-->
+        <!--android:textSize="16dp"-->
+        <!--android:visibility="gone" />-->
 
     <View
         android:id="@+id/visdf"
         android:layout_width="match_parent"
         android:layout_height="1.5dp"
-        android:layout_below="@+id/tv_section"
+        android:layout_below="@+id/tv_location"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
