--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,13 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="#B0C4DE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -49,9 +50,9 @@
             android:layout_gravity="bottom|end"
             android:layout_marginBottom="160dp"
             android:layout_marginRight="15sp"
-            android:src="@drawable/ic_icons8_google"
+            android:src="@drawable/icons8_edit"
             android:visibility="invisible"
-            app:backgroundTint="#ffffff"
+            app:backgroundTint="#FFFFFF"
             app:elevation="6dp"
             app:pressedTranslationZ="12dp" />
 
@@ -63,9 +64,9 @@
             android:layout_gravity="bottom|end"
             android:layout_marginBottom="90dp"
             android:layout_marginRight="15sp"
-            android:src="@drawable/ic_icons8_google"
+            android:src="@drawable/icons8_note"
             android:visibility="invisible"
-            app:backgroundTint="#ffffff"
+            app:backgroundTint="#FFFFFF"
             app:elevation="6dp"
             app:pressedTranslationZ="12dp" />
 
@@ -75,8 +76,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="15sp"
-            android:backgroundTint="#9500ff"
-            android:src="@drawable/ic_icons8_google" />
+            android:backgroundTint="#FFFFFF"
+            android:src="@drawable/icons8_add_new" />
 
     </FrameLayout>
 
