--- a/app/src/main/res/layout/activity_daycalendar.xml
+++ b/app/src/main/res/layout/activity_daycalendar.xml
@@ -37,13 +37,14 @@
 
         <Button
             android:id="@+id/datePicker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#00ff0000"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:textSize="20dp"/>
 
-        <Button
-            android:id="@+id/timePicker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <View style="@style/Divider"/>
