--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,11 +64,13 @@
         android:textSize="20dp"
         android:layout_gravity="center|top"/>
 
-    <TextView
+    <Button
         android:id="@+id/noEmailBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center|top"
+        android:background="#00ff0000"
+        style="?android:attr/borderlessButtonStyle"
         android:text="아이디가 없으신가요?"/>
 
 </LinearLayout>
