--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -16,7 +16,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:theme="@style/AppTheme.PopupOverlay" />
+        app:theme="@style/AppTheme.PopupOverlay" >
+        <Button
+            android:id="@+id/day"
+            android:layout_gravity="right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#00ff0000"
+            style="?android:attr/borderlessButtonStyle"
+            android:text="일정"/>
+        <Button
+            android:id="@+id/memo"
+            android:layout_gravity="right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#00ff0000"
+            style="?android:attr/borderlessButtonStyle"
+            android:text="메모"
+            />
+    </android.support.v7.widget.Toolbar>
     <!--android:minHeight="?attr/actionBarSize"-->
 
     <include
