--- a/app/src/main/res/layout/google_oauth.xml
+++ b/app/src/main/res/layout/google_oauth.xml
@@ -22,4 +22,11 @@
         android:layout_marginTop="10dp"
         android:text=""/>
 
+    <Button
+        android:id="@+id/complete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="완료"/>
+
 </LinearLayout>
